chrome/browser/flag_descriptions.cc
@@ -3167,10 +3167,6 @@ const char kMacV2GPUSandboxName[] = "Mac V2 GPU Sandbox";
 const char kMacV2GPUSandboxDescription[] =
     "Controls whether the GPU process on macOS uses the V1 or V2 sandbox.";
 
-const char kMacViewsTaskManagerName[] = "Toolkit-Views Task Manager.";
-const char kMacViewsTaskManagerDescription[] =
-    "Controls whether to use the Toolkit-Views based Task Manager.";
-
 const char kMacSystemMediaPermissionsInfoUiName[] =
     "System media permissions info UI";
 const char kMacSystemMediaPermissionsInfoUiDescription[] =
